temp/flask-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-api-ingress
  namespace: default
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: my-release
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my-web-app.example.com
    secretName: web-app-tls
  rules:
  - host: my-web-app.example.com
    http:
      paths:
      - path: /flask-api
        pathType: Prefix
        backend:
          service:
            name: flask-api
            port:
              number: 8081
